phase6/cloudformation/01-app-autoscale-group.yaml
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  DefaultSecurityGroupId:
    Description: ID of default security group in your VPC
    Type: String

Resources:
  IAMRole:
    Type: "AWS::IAM::Role"
    Properties:
      RoleName: web-role
      Description: "IAM Role applied to web servers"
      MaxSessionDuration: 3600
      Path: "/"
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: Allow-S3-Access
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action: 
                  - "s3:*"
                Resource: 
                  - "arn:aws:s3:::drupal-govcon-2021-assets"
                  - "arn:aws:s3:::drupal-govcon-2021-assets/*"
                  - "arn:aws:s3:::drupal-govcon-2021"
                  - "arn:aws:s3:::drupal-govcon-2021/*"

  IAMInstanceProfile:
    Type: "AWS::IAM::InstanceProfile"
    Properties:
      InstanceProfileName: web-role
      Path: "/"
      Roles:
        - Ref: "IAMRole"

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow web access directly to EC2 instance with public IP
      VpcId: vpc-709cea0d

  WebSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: WebSecurityGroup
    Properties:
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
      FromPort: 80
      ToPort: 80
      GroupId: !GetAtt WebSecurityGroup.GroupId
      Description: Allow ingress on port 80

  DefaultSecurityGroupIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DependsOn: WebSecurityGroup
    Properties:
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref DefaultSecurityGroupId
      FromPort: 22
      ToPort: 22
      GroupId: !GetAtt WebSecurityGroup.GroupId
      Description: Allow SSH from default SG 
      
  AppLaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties: 
      AssociatePublicIpAddress: false
      BlockDeviceMappings:
          -
            DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 20
              VolumeType: gp3
              DeleteOnTermination: true
      EbsOptimized: true
      IamInstanceProfile: !Ref IAMRole
      ImageId: ami-0c2b8ca1dad447f8a
      InstanceType: t3.small
      KeyName: cloud9
      LaunchConfigurationName: Drupal App
      MetadataOptions: 
        MetadataOptions
      SecurityGroups: 
        - !Ref WebSecurityGroup
        - !Ref DefaultSecurityGroupId
      UserData: 
        !Base64 |
        #!/bin/sh -xe
        yum update -y && yum install -y docker git mysql

        # Install docker-compose and setup docker
        service docker start
        curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
        chmod +x /usr/local/bin/docker-compose
        usermod -aG docker ec2-user
        ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
  
        # Setup app folder structure
        mkdir /var/app -p
        chown 1000:1000 /var/app
  
        # clone repo
        sudo -u "#1000" git clone https://github.com/mobomo/drupal-govcon-2021-training.git /var/app
  
        # Download env file(s)
        aws s3 cp s3://drupal-govcon-2021/phase1.env /var/app/phase1/.env
        aws s3 cp s3://drupal-govcon-2021/phase2.env /var/app/phase2/.env
        aws s3 cp s3://drupal-govcon-2021/phase3.env /var/app/phase3/.env
        aws s3 cp s3://drupal-govcon-2021/phase4.env /var/app/phase4/.env
        aws s3 cp s3://drupal-govcon-2021/phase5.env /var/app/phase5/.env

        # Export environment variables
        set -a && source /var/app/phase1/.env && set +a

        # startup docker-compose
        cd /var/app
        docker-compose -f phase1/docker-compose.yml up --build -d

        # run drupal install
        docker exec -u http govcon2021_web sh -c "/bootstrap/install-drupal.sh"

  EC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      BlockDeviceMappings:
          -
            DeviceName: /dev/sda1
            Ebs:
              VolumeSize: 20
              VolumeType: gp3
              DeleteOnTermination: true
      EbsOptimized: true
      IamInstanceProfile: !Ref IAMRole
      ImageId: ami-0c2b8ca1dad447f8a
      InstanceType: t3.small
      KeyName: cloud9
      SecurityGroupIds: 
        - !Ref WebSecurityGroup
        - !Ref DefaultSecurityGroupId
      SubnetId: subnet-1d426442
      Tags: 
        -
          Key: Name
          Value: Drupal App
      UserData:
        !Base64 |
        #!/bin/sh -xe
        yum update -y && yum install -y docker git mysql

        # Install docker-compose and setup docker
        service docker start
        curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
        chmod +x /usr/local/bin/docker-compose
        usermod -aG docker ec2-user
        ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
  
        # Setup app folder structure
        mkdir /var/app -p
        chown 1000:1000 /var/app
  
        # clone repo
        sudo -u "#1000" git clone https://github.com/mobomo/drupal-govcon-2021-training.git /var/app
  
        # Download env file(s)
        aws s3 cp s3://drupal-govcon-2021/phase1.env /var/app/phase1/.env
        aws s3 cp s3://drupal-govcon-2021/phase2.env /var/app/phase2/.env
        aws s3 cp s3://drupal-govcon-2021/phase3.env /var/app/phase3/.env
        aws s3 cp s3://drupal-govcon-2021/phase4.env /var/app/phase4/.env
        aws s3 cp s3://drupal-govcon-2021/phase5.env /var/app/phase5/.env

        # Export environment variables
        set -a && source /var/app/phase1/.env && set +a

        # startup docker-compose
        cd /var/app
        docker-compose -f phase1/docker-compose.yml up --build -d

        # run drupal install
        docker exec -u http govcon2021_web sh -c "/bootstrap/install-drupal.sh"

  DNS:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId : Z01629752800X7928YLRP
      Name: govcon2021.mobomo.net
      ResourceRecords:
      - !GetAtt EC2Instance.PublicIp
      TTL: 60
      Type: A

Outputs:
  InstancePublicIP:
    Description: Public IP of Webserver
    Value: !GetAtt EC2Instance.PublicIp

  InstancePrivateIP:
    Description: Private IP of Webserver
    Value: !GetAtt EC2Instance.PrivateIp
    
  WebSecurityGroupID:
    Description: Security Group ID for Web SG that allows ingress on port 80 for webservers
    Value: !GetAtt WebSecurityGroup.GroupId
